--- a/_posts/2021-01-26-Selenium.md
+++ b/_posts/2021-01-26-Selenium.md
@@ -59,6 +59,7 @@ options.add_experimental_option("prefs", {
   "safebrowsing.enabled": True
 })
 ```
+
 ## 대기(wait)
 
 - 동적 페이지를 크롤링하다 보면, 해당 페이지가 제대로 로딩이 된 후에 크롤링을 진행해야 누락되는 정보없이 가져올 수 있다. 특히 페이지 로딩이 늦은 환경에서는 대기 시간을 지정해주지 않으면 오류가 뜰 확률이 높다. 따라서 대기를 중간 중간 해주는 것이 중요한데, 대기 상태는 세 가지로 구분할 수 있다.
@@ -257,13 +258,30 @@ driver.find_element_by_id('속성').clear()
     # 새로 열린 창에서 작동
     ```
 
-- 닫기 혹은 저장 버튼을 클릭하여 해당 창이 닫히더라도 위 코드를 입력하여 기존의 창으로 돌아가야 한다.
+    닫기 혹은 저장 버튼을 클릭하여 해당 창이 닫히더라도 위 코드를 입력하여 기존의 창으로 돌아가야 한다.  
+
+- 현재 창의 이름을 확인(`driver.title`)하거나 창의 개수(`len(driver.window_handles)`)를 확인할 수도 있다.  
+- 창이 여러 개일 때, 가장 메인 창을 제외하고 모두 닫으려면 다음 코드를 사용한다.  
+
+    ```python
+    main = driver.window_handles
+    for handle in main:
+     if handle != main[0]:
+      driver.switch_to_.window(handle)
+      driver.close()
+    ```
+
+- 현재 창을 닫기 위해서는 `driver.close()`를 사용한다. 다만, 현재 창이 닫고자 하는 창이 맞는지 확인을 꼭 해줘야 한다. (`switch_to_.window`를 사용하여 닫고자 하는 창으로 돌아간 후 닫는다.)  
+
 - 참고자료
-    - [https://jamanbbo.tistory.com/51](https://jamanbbo.tistory.com/51)
+    - [https://jamanbbo.tistory.com/51](https://jamanbbo.tistory.com/51)  
+    - [https://sikaleo.tistory.com/60](https://sikaleo.tistory.com/60)  
+    - [https://riptutorial.com/selenium-webdriver/example/18341/managing-the-active-window](https://riptutorial.com/selenium-webdriver/example/18341/managing-the-active-window)  
+
 
 ## 오류
 
-- selenium.common.exceptions.ElementClickInterceptedException: Message: element click intercepted: Element is not clickable at point (X, Y).
+- ElementClickInterceptedException
     - 해당 요소를 클릭하고자 했을 때 스크롤의 문제나 페이지 로딩의 문제 때문에 특정 위치에 해당 요소가 없다. 새로 페이지에 접속해서 클릭하는 경우 앞서 언급한 '대기'의 `implicitly_wait`을 사용하고, 이미 접속한 페이지에서 사용하는 경우 다음과 같이 `execute_script`를 사용하여 해결할 수 있다.
 
     ```python
@@ -275,7 +293,34 @@ driver.find_element_by_id('속성').clear()
     - 참고자료
         - [https://stackoverflow.com/questions/37879010/selenium-debugging-element-is-not-clickable-at-point-x-y](https://stackoverflow.com/questions/37879010/selenium-debugging-element-is-not-clickable-at-point-x-y)
 
+- NoSuchElementException
+    - 원하는 요소가 페이지에 없을 때 발생했을 수 있는 문제는 다음과 같다.
+        - 페이지 로딩 문제
+            - 페이지를 제대로 작성하였는지, 해당 요소가 그 위치에 존재하는 것이 맞는지 확인한다.
+            - 코드를 제대로 작성하였다면, Scroll을 사용하여 해당 위치로 변경해주는 작업을 추가해줄 경우 발생 확률이 낮아진다.
+            - 만약 해당 문제가 발생하여도 상관없다면 Try Except를 사용한다.
+
+                ```python
+                try:
+                  element = driver.find_element_by_xpath('XPATH')
+                except NoSuchElementException as ex:
+                  print('%d 번째 %s 오류' % (i, ex))
+                ```
+
+        - 새 창에서 작업하는 문제
+            - 상위에서 작성한 코드를 참고하여, 기존 창으로 돌아가야 한다.  
+
+    - 참고자료
+        - [https://stackoverflow.com/questions/19200497/python-selenium-webscraping-nosuchelementexception-not-recognized](https://stackoverflow.com/questions/19200497/python-selenium-webscraping-nosuchelementexception-not-recognized)
+        - [https://sangmoo.tistory.com/262](https://sangmoo.tistory.com/262)  
+
+- Inalid Argument:
+    - 사용자가 업로드하고자 하는 파일의 경로나 해당 페이지의 링크에 문제가 있다. 따라서 이 부분을 다시 확인한다.  
+
 ---
+
+- 결과적으로 셀레니움을 사용할 때는 몇 가지 기능만 알고 있어도 유용하게 사용할 수 있을 것이다.  
+  - `click`, `clear`, `send_keys`, `select`, `scrollIntoView` 등
 
 - 기타 참고자료
     - [https://www.fun-coding.org/crawl_advance7.html](https://www.fun-coding.org/crawl_advance7.html)
