update function 'scrape_detail_page'

--- a/_posts/2020-09-14-crawling.md
+++ b/_posts/2020-09-14-crawling.md
@@ -663,36 +663,36 @@ def scrape_detail_page(url):
         driver.get(url)
         h = driver.page_source
         s = BeautifulSoup(h, 'lxml')
-    
+
         # 우대사항
-        if len(s.select('section._1LnfhLPc7hiSZaaXxRv11H > p:nth-of-type(4) > span')[0].text) > 0:
-            wd = s.select('section._1LnfhLPc7hiSZaaXxRv11H > p:nth-of-type(4) > span')[0].text
+        if len(s.select('#__next > div > div._37L2cip40tqu3zm3KC4dAa > div._17tolBMfrAeoPmo6I9pA1P > div._1FVm15xN253istI2zLF_Ax > div._33u5kCnL62igIXfrIg7Ikl > div._31EtVNPZ-KwYCXvVZ3927g > section._3_gsSnQyvwrqCAjw47hjWK > p:nth-child(7) > span')[0].text) > 0:
+            wd = s.select('#__next > div > div._37L2cip40tqu3zm3KC4dAa > div._17tolBMfrAeoPmo6I9pA1P > div._1FVm15xN253istI2zLF_Ax > div._33u5kCnL62igIXfrIg7Ikl > div._31EtVNPZ-KwYCXvVZ3927g > section._3_gsSnQyvwrqCAjw47hjWK > p:nth-child(7) > span')[0].text
         else:
             wd = np.nan
-        
+
         # 자격요건
-        if len(s.select('section._1LnfhLPc7hiSZaaXxRv11H > p:nth-of-type(3) > span')[0].text) > 0:
-            jk = s.select('section._1LnfhLPc7hiSZaaXxRv11H > p:nth-of-type(3) > span')[0].text
+        if len(s.select('#__next > div > div._37L2cip40tqu3zm3KC4dAa > div._17tolBMfrAeoPmo6I9pA1P > div._1FVm15xN253istI2zLF_Ax > div._33u5kCnL62igIXfrIg7Ikl > div._31EtVNPZ-KwYCXvVZ3927g > section._3_gsSnQyvwrqCAjw47hjWK > p:nth-child(5) > span')[0].text) > 0:
+            jk = s.select('#__next > div > div._37L2cip40tqu3zm3KC4dAa > div._17tolBMfrAeoPmo6I9pA1P > div._1FVm15xN253istI2zLF_Ax > div._33u5kCnL62igIXfrIg7Ikl > div._31EtVNPZ-KwYCXvVZ3927g > section._3_gsSnQyvwrqCAjw47hjWK > p:nth-child(5) > span')[0].text
         else:
             jk = np.nan
 
         # 혜택 및 복지
-        if len(s.select('section._1LnfhLPc7hiSZaaXxRv11H > p:nth-of-type(5) > span')[0].text) > 0:
-            ht = s.select('section._1LnfhLPc7hiSZaaXxRv11H > p:nth-of-type(5) > span')[0].text
+        if len(s.select('#__next > div > div._37L2cip40tqu3zm3KC4dAa > div._17tolBMfrAeoPmo6I9pA1P > div._1FVm15xN253istI2zLF_Ax > div._33u5kCnL62igIXfrIg7Ikl > div._31EtVNPZ-KwYCXvVZ3927g > section._3_gsSnQyvwrqCAjw47hjWK > p:nth-child(9)')[0].text) > 0:
+            ht = s.select('#__next > div > div._37L2cip40tqu3zm3KC4dAa > div._17tolBMfrAeoPmo6I9pA1P > div._1FVm15xN253istI2zLF_Ax > div._33u5kCnL62igIXfrIg7Ikl > div._31EtVNPZ-KwYCXvVZ3927g > section._3_gsSnQyvwrqCAjw47hjWK > p:nth-child(9)')[0].text
         else:
             ht = np.nan
-        
+
         # 주소
-        if len(s.select('section._3XP3DBqOgzsz7P6KrVpbGO > div:nth-of-type(2) > span.body')[0].text) > 0:
-            address = s.select('section._3XP3DBqOgzsz7P6KrVpbGO > div:nth-of-type(2) > span.body')[0].text
+        if len(driver.find_elements_by_xpath('//*[@id="__next"]/div/div[3]/div[1]/div[1]/div[1]/div[2]/section[2]/div[2]/span[2]')) > 0:
+            address = driver.find_element_by_xpath('//*[@id="__next"]/div/div[3]/div[1]/div[1]/div[1]/div[2]/section[2]/div[2]/span[2]').text
         else:
             address = np.nan
-        
+
         info = {
-            '우대사항': wd.replace('•','\n'),
-            '자격요건': jk.replace('•','\n'),
-            '혜택 및 복지': ht.replace('•','\n'),
-            '주소': address 
+            '우대사항': wd.replace('•', '\n'),
+            '자격요건': jk.replace('•', '\n'),
+            '혜택 및 복지': ht.replace('•', '\n'),
+            '주소': address
         };
         driver.close()
         return info
