--- a/_posts/2020-09-14-crawling.md
+++ b/_posts/2020-09-14-crawling.md
@@ -2,7 +2,7 @@
 # layout: post
 title: "[Crawling] 스크래핑과 크롤링"
 categories:
- - textmining
+ - NLP
 excerpt: "네이버 뉴스와 취업공고 사이트를 중심으로"
 tags: 
  - textmining
