--- a/_posts/2021-10-18-GPT1.md
+++ b/_posts/2021-10-18-GPT1.md
@@ -2,7 +2,7 @@
 # layout: post
 title: "[논문리뷰] Improving language understanding by generative pre-training"
 categories:
- - textmining
+ - NLP
 tags: 
  - NLP
  - GPT
