Notion link updates

--- a/_posts/2021-10-18-GPT1.md
+++ b/_posts/2021-10-18-GPT1.md
@@ -206,4 +206,4 @@ OPEN AI에서 만든 모델 GPT1에 관한 논문 [Improving language understand
     
     [[자연어처리][paper review] GPT-1 : Improving Language Understanding by Generative Pre-Training](https://supkoon.tistory.com/23)
 
-- 제 개인 [Notion](https://www.notion.so/GPT1-Improving-language-understanding-by-generative-pre-training-506be8cd4b214f20b937dd114e6a1d4e)에서도 확인 가능합니다.
+- 제 개인 [Notion](https://chocolate-zircon-a19.notion.site/GPT1-Improving-language-understanding-by-generative-pre-training-506be8cd4b214f20b937dd114e6a1d4e)에서도 확인 가능합니다.
