--- a/_posts/2021-10-21-LeNet.md
+++ b/_posts/2021-10-21-LeNet.md
@@ -99,6 +99,8 @@ This paper addresses that gradient-based, automatic learning can result in bette
   - The model was trained with SGD with momentum and weight decay of 0.9 and 0.0005, respectively. Batch size was set to 128. Weights were initialized from Gaussian distribution with mean and variance 0 and 1, respectively. Biases were initialized as 1 in all the fully connected layers and second, fourth, fifth convolutional layers.
   - As a result, the model achieved best performance in ILSVRC-2012 in top-5 error rates, and all the top five labels were reasonable. GPU 1 had focused on color-agnostic kernels, whereas kernels of GPU 2 were color-specific. Therefore, this study showed that deep, large CNN could achieve better performance only with supervised learning.
 
+---
+- 제 개인 [Notion](https://chocolate-zircon-a19.notion.site/Gradient-Based-Learning-Applied-to-Document-Recognition-b22a1b132e6949528de803f08a4a027a)에서도 확인 가능합니다.
 
 ---
 - 참고자료
