--- a/_posts/2021-10-21-LeNet.md
+++ b/_posts/2021-10-21-LeNet.md
@@ -94,7 +94,8 @@ This paper addresses that gradient-based, automatic learning can result in bette
   - Secondly, since networks are too big for one GPU, the model was trained by **two GPUs**. The GPUs are designed to communicate in certain layers; therefore, parallelization is available. The columns are not independent in this study, which is different from columnar CNN in the research of Ciresan et al.
   - Then, **local normalization** was used for generalization. The expression of response-normalization is given as following: $b_{x,y}^i=\frac{a_{x,y}^i}{(k+\alpha \sum_{j=max(0,i-n/2)}^{min(N-1, i+n/2)}{(a_{x,y}^j))}^\beta}$ where $a_{x,y}^i$ is a neuron activity after applying kernel to the (x,y) position. The concept is similar to the local contrast normalization of Jarrett et al., but this model does not subtract the mean activity.
   - Finally, adjacent units of pooling can be overlapped. Traditionally, neighbor units are non-overlapping, but the researchers in this study observed that the **overlapping pooling** could prevent overfitting.
-  - Thus far, four different ideas were introduced. Then, the **overall architecture** consists of five convolutional layers and three fully connected layers. The kernels in second, fourth and fifth convolutional layers are only connected to those in previous layers on the same GPU. On the other hands, kernels in third layer are connected to all kernel maps in second layer. After first and second convolutional layers, response-normalization layers are followed. Fifth convolution layer as well as two response-normalization layers had overlapping **max pooling** layers followed. ReLU activation function was applied to outputs of all the convolutional and fully connected layers.
+  - Thus far, four different ideas were introduced. Then, the overall architecture consists of five convolutional layers and three fully connected layers. The kernels in second, fourth and fifth convolutional layers are only connected to those in previous layers on the same GPU. On the other hands, kernels in third layer are connected to all kernel maps in second layer. After first and second convolutional layers, response-normalization layers are followed. Fifth convolution layer as well as two response-normalization layers had overlapping **max pooling** layers followed. ReLU activation function was applied to outputs of all the convolutional and fully connected layers.
+  ![architecture](/img/AlexNet.jpg)
   - To reduce **overfitting**, the researchers augmented data by applying horizontal reflections and translations to images. In addition, they altered the intensity and color by adding principal components resulted from PCA. Moreover, they used dropout with probability 0.5 in the first two fully connected layers.
   - The model was trained with SGD with momentum and weight decay of 0.9 and 0.0005, respectively. Batch size was set to 128. Weights were initialized from Gaussian distribution with mean and variance 0 and 1, respectively. Biases were initialized as 1 in all the fully connected layers and second, fourth, fifth convolutional layers.
   - As a result, the model achieved best performance in ILSVRC-2012 in top-5 error rates, and all the top five labels were reasonable. GPU 1 had focused on color-agnostic kernels, whereas kernels of GPU 2 were color-specific. Therefore, this study showed that deep, large CNN could achieve better performance only with supervised learning.
