--- a/_posts/2021-10-18-GPT1.md
+++ b/_posts/2021-10-18-GPT1.md
@@ -36,7 +36,7 @@ mathjax: true
 </style>
 
 
-OPEN AI에서 만든 모델 GPT1에 관한 논문 [Improving language understanding by generative pre-training]()을 정리하였습니다. 해당 연구에서는 다양한 task에서 사용할 수 있는, semi-supervised, Transformer 기반 pre-trained 모델을 제안하였습니다. (참고로, GPT1과 GPT2, GPT3의 가장 큰 차이는 사용된 데이터셋의 크기입니다.) 
+OPEN AI에서 만든 모델 GPT1에 관한 논문 [Improving language understanding by generative pre-training](https://www.cs.ubc.ca/~amuham01/LING530/papers/radford2018improving.pdf)을 정리하였습니다. 해당 연구에서는 다양한 task에서 사용할 수 있는, semi-supervised, Transformer 기반 pre-trained 모델을 제안하였습니다. (참고로, GPT1과 GPT2, GPT3의 가장 큰 차이는 사용된 데이터셋의 크기입니다.) 
 
 # Abstract
 
