--- a/_posts/2021-11-30-KPRN.md
+++ b/_posts/2021-11-30-KPRN.md
@@ -47,7 +47,7 @@ Incorporating **knowledge graph** into **recommender** systems has attracted inc
 - 따라서 items에 대한 배경 지식과 그들 간의 relation을 표현할 수 있는 knowledge graphs (KG)에 대한 관심이 증가하였다.
     - interlinks: user-item interaction as a form of triplets i.e. (*Ed Sheeran, IsSingerOf, ShapeOfYou*) → reflect underlying relationships
 
-![kg](/img/KG/ex_kg_recom_1.JPG)
+![kg](/img/ex_kg_recom_1.JPG)
 
 - 위의 그림을 참고하면 user-item connectivity는 추천시스템에서 reasoning, explainability를 가능하게 한다는 것을 알 수 있다.
     - 보이지 않는 relationships, 추천할 수 있는 interations에 대한 이유와 설명을 제공한다.
@@ -111,7 +111,7 @@ $$(\mathcal{I} \subseteq \mathcal{E}), \mathcal{E}' = \mathcal{E} \cup \mathcal{
     (3) pooling layer: multiple path를 병합하여 하나의 output을 구함
     
 
-![kg](/img/KG/ex_kg_recom_2.JPG)
+![kg](/img/ex_kg_recom_2.JPG)
 
 1. **embedding layer (*d* dimension)**
     - entity의 정확한 명칭 (i.e. Peter Jackson, The Hobit II): $e_l \in \mathbb{R}^d$
@@ -123,7 +123,7 @@ $$(\mathcal{I} \subseteq \mathcal{E}), \mathcal{E}' = \mathcal{E} \cup \mathcal{
     - long-term dependency를 구하기 위해 RNN 모델 중 LSTM을 사용
     - $l-1$ step에서의 input: $$e_{l-1}, e'_{l-1}, r_{l-1}$$을 concat한 값($x_{l-1}$)과 $h_{l-2}$ / output: hidden state $h_{l-1}$
     - 마지막 entity $e_L$ 다음에 위치한 null relation인 $r_L$은 패딩(padding)으로 채운다.
-    - ![kg](/img/KG/ex_kg_recom_3.JPG)
+    - ![kg](/img/ex_kg_recom_3.JPG)
     - 위의 과정을 통해 마지막 $p_k$에 대한 representations을 구한 후, 두 개의 fc layers를 통해 최종 output score을 구한다.
     $$s(\tau|p_k)=W_2^TReLU(W_1^Tp_k)$$
 3. **weighted pooling layer**
@@ -151,7 +151,7 @@ $(\mathcal{O}^{-}=\{(u,j)|u_{uj}=0\})$을 의미한다.
 
 ## Dataset Description
 
-![kg](/img/KG/ex_kg_recom_4.JPG)
+![kg](/img/ex_kg_recom_4.JPG)
 
 1. movie recommendation: user rates a movie (positive feedback; 1)
     - [MovieLens-1M](https://grouplens.org/datasets/movielens/1m/.): user-item의 interaction data
@@ -197,20 +197,20 @@ $(\mathcal{O}^{-}=\{(u,j)|u_{uj}=0\})$을 의미한다.
 
 ## Performance Comparison (RQ1)
 
-![kg](/img/KG/ex_kg_recom_5.JPG)
+![kg](/img/ex_kg_recom_5.JPG)
 
 ## Study of KPRN (RQ2)
 
 - **Effects of Relation Modeling**
     
-    ![kg](/img/KG/ex_kg_recom_6.JPG)
+    ![kg](/img/ex_kg_recom_6.JPG)
     
     - relation modeling이 존재하지 않는 KPRN (KPRN-r)과 비교한 결과, 두 데이터셋에서 모두 KPRN-r의 성능이 낮았다.
     - KKBox 데이터셋에 대해서는 KPRN-r에 비해 KPRN의 향상도가 낮은데, 이는 KKBox에서는 더 적은 paths를 제공하기 때문이다.
     - 따라서, strong connectivity가 존재하는 경우 relation의 중요도가 더 증가한다.
 - **Effects of Weighted Pooling**
     
-    ![kg](/img/KG/ex_kg_recom_7.JPG)
+    ![kg](/img/ex_kg_recom_7.JPG)
     
     - $\gamma$가 1에서 0.1로 감소할 때 max pooling과 유사한 계산을 하게 되며, 가장 중요한 하나의 path만 고려하기 때문에 성능이 감소한다.
     - $\gamma$가 1에서 10으로 증가할 때 중요하지 않은 정보들까지 고려하게 되면서 성능이 하락하였다.
@@ -219,7 +219,7 @@ $(\mathcal{O}^{-}=\{(u,j)|u_{uj}=0\})$을 의미한다.
 
 - 해당 연구는 세 가지 factors를 사용하므로 더 higher-level의 해석이 가능하다.
 
-![kg](/img/KG/ex_kg_recom_8.JPG)
+![kg](/img/ex_kg_recom_8.JPG)
 
 # Related Work
 
