--- a/_posts/2022-02-12-KBERT.md
+++ b/_posts/2022-02-12-KBERT.md
@@ -6,7 +6,7 @@ categories:
 tags: 
  - Knowledge Graph
  - BERT
- - Augmentation
+ - Visible matrix
  - paper review
 # share: true 
 comments: true 
