--- a/_posts/2022-02-12-KBERT.md
+++ b/_posts/2022-02-12-KBERT.md
@@ -35,7 +35,7 @@ mathjax: true
     }
 </style>
 
-- [해당 논문](https://arxiv.org/abs/1909.07606)은 BERT에 Knowledge graph를 추가해 도메인 지식을 align할 수 있는 framework를 제공하였다. 
+- [해당 논문](https://arxiv.org/abs/1909.07606)은 BERT에 Knowledge graph를 추가해 도메인 지식을 align할 수 있는 language representation model을 제공하였다. 
 - [Transformer](https://jej0312.github.io/nlp/Attention_is_all_you_need/)와 [BERT](https://jej0312.github.io/nlp/BERT/)에 대해 미리 읽으면 도움될 것  
 
 # Abstract
