--- a/_posts/2021-11-30-KPRN.md
+++ b/_posts/2021-11-30-KPRN.md
@@ -2,7 +2,7 @@
 # layout: post
 title: "[논문리뷰] Explainable Reasoning over Knowledge Graphs for Recommendation"
 categories:
- - KG
+ - Graph/KG
 tags: 
  - Knowledge Graph
  - Recommender
