--- a/_posts/2022-01-24-KGAT.md
+++ b/_posts/2022-01-24-KGAT.md
@@ -2,7 +2,7 @@
 # layout: post
 title: "[논문리뷰] KGAT: Knowledge Graph Attention Network for Recommendation"
 categories:
- - KG
+ - Graph/KG
 tags: 
  - Knowledge Graph
  - Attention
