--- a/_posts/2022-02-12-EDGE.md
+++ b/_posts/2022-02-12-EDGE.md
@@ -2,7 +2,7 @@
 # layout: post
 title: "[논문리뷰] EDGE: Enriching Knowledge Graph Embeddings with External Text"
 categories:
- - KG
+ - Graph/KG
 tags: 
  - Knowledge Graph
  - Graph alignment
