--- a/_posts/2022-02-12-KBERT.md
+++ b/_posts/2022-02-12-KBERT.md
@@ -2,7 +2,7 @@
 # layout: post
 title: "[논문리뷰] K-BERT: Enabling Language Representation with Knowledge Graph"
 categories:
- - KG
+ - Graph/KG
 tags: 
  - Knowledge Graph
  - BERT
